--- a/app/views/service_requests/_map.js.erb
+++ b/app/views/service_requests/_map.js.erb
@@ -18,6 +18,7 @@ function initMap() {
   var mapOptions = {
     center: focus,
     zoom: 10,
+    scrollwheel: false,
     draggable: toDrag()
   };
 
