update 123 links on home page

--- a/app/views/static_pages/home.html.erb
+++ b/app/views/static_pages/home.html.erb
@@ -68,7 +68,8 @@
                   <div class="card-action white black-text">
                     <h3>Request a Quote</h3>
                     <p>Looking to start a new home project? Hire an expert to ensure your project is done right from start to finish.</p>
-                    <a href="#">Request a Quote</a>
+                    <!-- <a href="#">Request a Quote</a>
+                    <h5>Request a Quote</h5> -->
                   </div>
                 </div>
               </div>
@@ -88,7 +89,8 @@
                   <div class="card-action white black-text">
                     <h3 class="center ">Receive Estimates</h3>
                     <p>Local companies will send you estimates based on your request. </p>
-                    <a href="#">Receive Estimates</a>
+                    <!-- <a href="#">Receive Estimates</a>
+                    <h5>Receive Estimates</h5> -->
                   </div>
                  </div>
               </div>
@@ -109,7 +111,7 @@
                    <div class="card-action white black-text">
                      <h3 class="center ">Choose an Expert</h3>
                      <p>Read reviews and chat with local companies to ensure your project turns out exactly the way you want.</p>
-                     <a href="#">Get started!</a>
+                     <!-- <a href="#">Get started!</a> -->
                    </div>
                   </div>
                </div>
