--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -13,7 +13,7 @@
       <!-- links on desktop -->
          <ul id="nav-mobile" class="right hide-on-med-and-down">
              <li><%= link_to 'Home', root_path, id: "home-button" %></li>
-             <li><%= link_to 'About Us', root_path %></li>
+             <li><%= link_to 'About Us', about_us_path %></li>
 
              <!-- Dropdown Trigger -->
              <% if logged_in? %>
