update about us page

--- a/app/views/static_pages/about_us.html.erb
+++ b/app/views/static_pages/about_us.html.erb
@@ -1,60 +1,71 @@
 <!-- Section 2 - Homepage Card section-->
 <div class="container">
     <div class="container">
-        
+
         <!-- Main Paragraph -->
         <div class="col">
-            <h2>Peeking behind the veil -- about team FixMyCar</h2>
+            <h5>Peeking behind the veil -- about team Service Works</h5>
             <p>Here is some history about our project.</p>
-        </div>    
+        </div>
     </div>
-        
+
     <div class="row ">
       <div class="col s12 m4">
-        <div class="icon block">
-            <h3 class="center brown-text">1. Chirs</h3>
+        <div class="icon block z-depth-1">
+            <h4 class="center brown-text">Chris Morse</h4>
             <div class="card 300px">
-              <div class="card-image">
-                <%= image_tag("plumbing.jpg")%>
+              <div class="card-image contact-img">
+                <%= image_tag("chrismorse.jpg")%>
                 <span class="card-title"> <!-- TITLE --> </span>
               </div>
-              <div class="card-content">
-                <p>1. Aboot Chirs<br>2. Chirs' Snort-Term Goals<br>3. How to contact Chirs</p>
+              <div class="card-content white">
+                <ul>
+                  <li>Contact@ChrisMorse.cn</li>
+                  <li>Connect with me on LinkedIn! (https://www.linkedin.com/in/modake)</li>
+                </ul>
               </div>
-              <div class="card-action">
+              <div class="card-action white">
               </div>
             </div>
         </div>
       </div>
 
         <div class="col s12 m4">
-          <div class="icon block">
-              <h3 class="center brown-text">2. Stephaknee</h3>
+          <div class="icon block z-depth-1">
+              <h4 class="center brown-text">Stephanie Reyes</h4>
               <div class="card 300px">
-                <div class="card-image">
-                  <%= image_tag("flooring.jpg")%>
+                <div class="card-image contact-img">
+                  <%= image_tag("Stephaniereyes.jpg")%>
                   <span class="card-title"> <!-- TITLE --> </span>
                 </div>
-                <div class="card-content">
-                  <p>Local companies will send you estimates based on your request. </p>
+                <div class="card-content white">
+                  <ul>
+                    <li>www.stephaniereyes.co</li>
+                    <li>stephanie@webreyes.com</li>
+                    <li>(786)390-7635</li>
+                  </ul>
                 </div>
-                <div class="card-action">
+                <div class="card-action white">
                 </div>
               </div>
           </div>
         </div>
           <div class="col s12 m4">
-            <div class="icon block">
-            <h3 class="center brown-text">3. Alycksz</h3>
+            <div class="icon block z-depth-1">
+            <h4 class="center brown-text">Alex Miller</h4>
               <div class="card 300px">
-                <div class="card-image">
-                    <%= image_tag("dining.jpg")%>
+                <div class="card-image contact-img" >
+                    <%= image_tag("alexmiller.jpg")%>
                   <span class="card-title"> <!-- TITLE --> </span>
                 </div>
-                <div class="card-content">
-                  <p>Read reviews and chat with local companies to ensure your project turns out exactly the way you want.</p>
+                <div class="card-content white">
+                  <ul>
+                    <li>www.alex-miller.co</li>
+                    <li>apmiller108@yahoo.com</li>
+                    <li>319-621-1065</li>
+                  </ul>
                 </div>
-                <div class="card-action">
+                <div class="card-action white">
                 </div>
               </div>
             </div>
