--- a/app/views/reviews/_review.html.erb
+++ b/app/views/reviews/_review.html.erb
@@ -13,7 +13,7 @@
     </div>
   <% end %>
 
-  <%= label_tag :rating, "Rating" %>
+
   <%# Select a rating 1 - 5 %>
   <%= f.select(:rating) do %>
     <% [["Select Rating", ""],[1,1], [2,2], [3,3], [4,4], [5,5]].each do |o| %>
@@ -21,12 +21,12 @@
     <% end %>
   <% end %>
 
-  <%= label_tag :comment, "Leave a comment" %>
-  <%= f.text_area :comment %><br>
+
+  <%= f.text_area :comment, class:"materialize-textarea" %><br>
   <%# Add service request ID to params %>
   <%= hidden_field_tag( :service_request_id, @service_request.id  ) %>
   <%# Add company (user) ID to params %>
   <%= hidden_field_tag("review[company_id]", @accepted_quote.user_id ) %>
-  <%= f.submit %>
+  <%= f.submit value:"Submit review", class:"btn green" %>
 
 <% end %>
