--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -77,7 +77,9 @@
             <%= f.password_field :password_confirmation%>
           </div>
 
-          <%= f.submit "Update", class: "btn btn-primary waves-effect waves-light indigo darken-4" %>
+          <div class="valign right-align">
+            <%= f.submit "Update", class: "btn btn-primary waves-effect waves-light indigo darken-4" %>
+          </div>
     </div>
   </div>
 </div>
