Apply orange highlighting to error fields and prevent disrupting the location of the form fields

--- a/app/assets/stylesheets/scaffolds.scss
+++ b/app/assets/stylesheets/scaffolds.scss
@@ -42,9 +42,8 @@ div {
 }
 
 .field_with_errors {
-  padding: 2px;
-  background-color: red;
-  display: table;
+  background-color: #FF9F1C;
+  border-radius: 5px;
 }
 s
 #error_explanation {
